@@ -1,11 +1,24 @@
 package com.sentrysoftware.matrix.common.meta.monitor;
 
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION1;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION2;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION3;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_ID;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.MODEL;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ROBOTIC_TYPE;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.SERIAL_NUMBER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.VENDOR;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_ALARM_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.PRESENT_ALARM_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_WARN_CONDITION;
+
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 
+import com.sentrysoftware.matrix.common.helpers.HardwareConstants;
 import com.sentrysoftware.matrix.common.meta.parameter.MetaParameter;
 import com.sentrysoftware.matrix.common.meta.parameter.ParameterType;
 import com.sentrysoftware.matrix.connector.model.monitor.MonitorType;
@@ -20,53 +33,32 @@ import com.sentrysoftware.matrix.model.parameter.ParameterState;
 import com.sentrysoftware.matrix.model.parameter.PresentParam;
 import com.sentrysoftware.matrix.model.parameter.StatusParam;
 
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION1;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION2;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION3;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_ID;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ENERGY_PARAMETER;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ENERGY_USAGE_PARAMETER;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ERROR_COUNT_PARAMETER;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ERROR_COUNT_PARAMETER_UNIT;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.MODEL;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.MOVE_COUNT_PARAMETER;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.MOVE_COUNT_PARAMETER_UNIT;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.POWER_CONSUMPTION_PARAMETER;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PRESENT_PARAMETER;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ROBOTIC_TYPE;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.SERIAL_NUMBER;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.STATUS_PARAMETER;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.VENDOR;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.PRESENT_ALARM_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_ALARM_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_WARN_CONDITION;
-
-public class Robotic implements IMetaMonitor {
+public class Robotics implements IMetaMonitor {
 
 	public static final MetaParameter MOVE_COUNT = MetaParameter.builder()
 			.basicCollect(false)
-			.name(MOVE_COUNT_PARAMETER)
-			.unit(MOVE_COUNT_PARAMETER_UNIT)
+			.name(HardwareConstants.MOVE_COUNT_PARAMETER)
+			.unit(HardwareConstants.MOVE_COUNT_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 	
 	public static final MetaParameter ERROR_COUNT = MetaParameter.builder()
 			.basicCollect(false)
-			.name(ERROR_COUNT_PARAMETER)
-			.unit(ERROR_COUNT_PARAMETER_UNIT)
+			.name(HardwareConstants.ERROR_COUNT_PARAMETER)
+			.unit(HardwareConstants.ERROR_COUNT_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	private static final List<String> METADATA = List.of(DEVICE_ID, SERIAL_NUMBER, VENDOR, MODEL, ROBOTIC_TYPE, ADDITIONAL_INFORMATION1,
 			ADDITIONAL_INFORMATION2, ADDITIONAL_INFORMATION3);
 
-	public static final AlertRule PRESENT_ALERT_RULE = new AlertRule(Robotic::checkMissingCondition,
+	public static final AlertRule PRESENT_ALERT_RULE = new AlertRule(Robotics::checkMissingCondition,
 			PRESENT_ALARM_CONDITION,
 			ParameterState.ALARM);
-	public static final AlertRule STATUS_WARN_ALERT_RULE = new AlertRule(Robotic::checkStatusWarnCondition,
+	public static final AlertRule STATUS_WARN_ALERT_RULE = new AlertRule(Robotics::checkStatusWarnCondition,
 			STATUS_WARN_CONDITION,
 			ParameterState.WARN);
-	public static final AlertRule STATUS_ALARM_ALERT_RULE = new AlertRule(Robotic::checkStatusAlarmCondition,
+	public static final AlertRule STATUS_ALARM_ALERT_RULE = new AlertRule(Robotics::checkStatusAlarmCondition,
 			STATUS_ALARM_CONDITION,
 			ParameterState.ALARM);
 
@@ -76,27 +68,27 @@ public class Robotic implements IMetaMonitor {
 	static {
 		final Map<String, MetaParameter> map = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
-		map.put(STATUS_PARAMETER, STATUS);
-		map.put(PRESENT_PARAMETER, PRESENT);
-		map.put(ERROR_COUNT_PARAMETER, ERROR_COUNT);
-		map.put(MOVE_COUNT_PARAMETER, MOVE_COUNT);
-		map.put(ENERGY_PARAMETER, ENERGY);
-		map.put(ENERGY_USAGE_PARAMETER, ENERGY_USAGE);
-		map.put(POWER_CONSUMPTION_PARAMETER, POWER_CONSUMPTION);
+		map.put(HardwareConstants.STATUS_PARAMETER, STATUS);
+		map.put(HardwareConstants.PRESENT_PARAMETER, PRESENT);
+		map.put(HardwareConstants.ERROR_COUNT_PARAMETER, ERROR_COUNT);
+		map.put(HardwareConstants.MOVE_COUNT_PARAMETER, MOVE_COUNT);
+		map.put(HardwareConstants.ENERGY_PARAMETER, ENERGY);
+		map.put(HardwareConstants.ENERGY_USAGE_PARAMETER, ENERGY_USAGE);
+		map.put(HardwareConstants.POWER_CONSUMPTION_PARAMETER, POWER_CONSUMPTION);
 
 		META_PARAMETERS = Collections.unmodifiableMap(map);
 
 		final Map<String, List<AlertRule>> alertRulesMap = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
-		alertRulesMap.put(PRESENT_PARAMETER, Collections.singletonList(PRESENT_ALERT_RULE));
-		alertRulesMap.put(STATUS_PARAMETER, List.of(STATUS_WARN_ALERT_RULE, STATUS_ALARM_ALERT_RULE));
+		alertRulesMap.put(HardwareConstants.PRESENT_PARAMETER, Collections.singletonList(PRESENT_ALERT_RULE));
+		alertRulesMap.put(HardwareConstants.STATUS_PARAMETER, List.of(STATUS_WARN_ALERT_RULE, STATUS_ALARM_ALERT_RULE));
 
 		ALERT_RULES = Collections.unmodifiableMap(alertRulesMap);
 
 	}
 
 	/**
-	 * Check missing Robotic condition.
+	 * Check missing Robotics condition.
 	 * 
 	 * @param monitor The monitor we wish to check
 	 * @param conditions The conditions used to determine the abnormality
@@ -124,7 +116,7 @@ public class Robotic implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkStatusWarnCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(STATUS_PARAMETER, conditions);
+		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(HardwareConstants.STATUS_PARAMETER, conditions);
 		if (assertedStatus.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -145,7 +137,7 @@ public class Robotic implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkStatusAlarmCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(STATUS_PARAMETER, conditions);
+		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(HardwareConstants.STATUS_PARAMETER, conditions);
 		if (assertedStatus.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -166,7 +158,7 @@ public class Robotic implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkErrorCountCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedErrorCount = monitor.assertNumberParameter(ERROR_COUNT_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedErrorCount = monitor.assertNumberParameter(HardwareConstants.ERROR_COUNT_PARAMETER, conditions);
 		if (assertedErrorCount.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -187,7 +179,7 @@ public class Robotic implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkHighErrorCountCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedErrorCount = monitor.assertNumberParameter(ERROR_COUNT_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedErrorCount = monitor.assertNumberParameter(HardwareConstants.ERROR_COUNT_PARAMETER, conditions);
 		if (assertedErrorCount.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -212,7 +204,7 @@ public class Robotic implements IMetaMonitor {
 
 	@Override
 	public MonitorType getMonitorType() {
-		return MonitorType.ROBOTIC;
+		return MonitorType.ROBOTICS;
 	}
 
 	@Override
